# liveeo_project

./: .env-example  Makefile  README.MD  README.md  ingest_spac_collection-deployment.yaml  pyproject.toml
.github/workflows/: test_flow.yml
experiment_notebooks/: research.ipynb
flows/ingestion/: ingest_spac_collection.py
flows/orchestration/: maintenance.py  parent_flow.py
flows/output/: update_results.py
flows/transformation/: disparity_matching.py  offset_correction.py
flows/upload/: upload_data.py
