[tool.poetry]
name = "liveeo pipeline"
version = "0.1.0"
description = ""
authors = ["trojrobert <trojrobert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.5"
prefect = "2.19.5"
pyspark = "3.5.1"
ipykernel = "6.29.4"
pystac-client = "0.8.2"
matplotlib = "3.9.0"
rasterio = "1.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
